@@ -1,3 +1,8 @@
+Mon Feb  9 19:52:32 2009  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/option.c (sockopt_initialize): argument conversion
+	  reordered.
+
 Mon Feb  9 19:46:22 2009  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket/ancdata.c (ancillary_initialize): add family argument.
